@@ -1,17 +1,9 @@
-use ExtUtils::MakeMaker;
+#!/usr/bin/env perl
 
-sub get_version {
-    my $file = "lib/clive/Config.pm";
-    my $re   = qr/VERSION => "(.*?)"/;
-    open my $fh, "<", $file
-        or die "$file: $!";
-    foreach (<$fh>) {
-        close $fh and return $1
-            if $_ =~ /$re/;
-    }
-    close $fh;
-    die "$file: `$re`: not matched";
-}
+use warnings;
+use strict;
+
+use ExtUtils::MakeMaker;
 
 my $version = get_version();
 
@@ -38,3 +30,16 @@ WriteMakefile(
         SUFFIX   => ".bz2"
     },
 );
+
+sub get_version {
+    my $file = "lib/clive/Config.pm";
+    my $re   = qr/VERSION => "(.*?)"/;
+    open my $fh, "<", $file
+        or die "$file: $!";
+    foreach (<$fh>) {
+        close $fh and return $1
+            if $_ =~ /$re/;
+    }
+    close $fh;
+    die "$file: `$re`: not matched";
+}
